--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "generate:webp": "node scripts/generate-webp.js",
     "attach:webp": "node scripts/attach-webp-to-menu.js",
     "generate:webp:variants": "node scripts/generate-webp-variants.js",
-    "attach:webp:variants": "node scripts/attach-webp-variants-to-menu.js"
+    "attach:webp:variants": "node scripts/attach-webp-variants-to-menu.js",
+    "validate:menu": "node scripts/validate-menu.js",
+    "test": "jest"
   },
   "devDependencies": {
     "glob": "^8.1.0",
+    "jest": "^29.7.0",
     "sharp": "^0.32.0",
     "svgo": "^3.0.0"
   }
