--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
-# Node
-node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Build
-dist/
+node_modules
+dist
+dist-ssr
+*.local
 
-# Env
-.env
-.env.local
-
-# System
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
