--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
-  "name": "norigami-menu-digital",
-  "version": "0.1.0",
+  "homepage": "https://yaotzin37.github.io/norigami.io",
+  "name": "temp_project",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "echo \"Start script not implemented\"",
-    "build": "echo \"Build script not implemented\"",
-    "import:menu": "node scripts/import-menu.js",
-    "compress:images": "node scripts/compress-images.js",
-    "generate:webp": "node scripts/generate-webp.js",
-    "attach:webp": "node scripts/attach-webp-to-menu.js",
-    "generate:webp:variants": "node scripts/generate-webp-variants.js",
-    "attach:webp:variants": "node scripts/attach-webp-variants-to-menu.js",
-    "validate:menu": "node scripts/validate-menu.js",
-    "test": "jest"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "autoprefixer": "^10.4.24",
+    "csv-parse": "^6.1.0",
+    "postcss": "^8.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "glob": "^8.1.0",
-    "jest": "^29.7.0",
-    "sharp": "^0.32.0",
-    "svgo": "^3.0.0"
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
+    "globals": "^16.5.0",
+    "vite": "^7.2.4"
   }
 }
