feat: Agregar imágenes generadas y automatizar detección de assets locales

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://yaotzin37.github.io/norigami.io",
-  "name": "temp_project",
+  "name": "norigami-io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
